# quadratic_bezier_splines_visualizer

./: CMakeLists.txt  readme.md
targets/demo/: CMakeLists.txt
targets/demo/cmake/: hard_assert.cmake
targets/demo/source/: main.c
targets/demo/source/splines/: basic.h  bounce.h  green.h  red.h
